solution fo AoC 2024 Day 5: 'Print Queue' part 2